Gjort ferdig Model

--- a/index.html
+++ b/index.html
@@ -4,13 +4,13 @@
         <meta charset="utf-8">
         <meta http-equiv="X-OK-Compatible" content="">
         <meta name="viewport" content="width=device-width, Initial-scale=1.0">
-        <title>Name and epost register</title>
-        <script src="statics/js/modal.js"></script>
+        <title>Belbin Team role assignment</title>
+        <script src="statics/js/model.js"></script>
         <script src="statics/js/view.js"></script>
         <script src="statics/js/controller.js"></script>
     </head>
     <body>
         <div id="app">
-
+            
         </div>
 </html>
