Working as intended

--- a/index.html
+++ b/index.html
@@ -1,15 +1,16 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <meta charset="utf-8">
-        <meta http-equiv="X-OK-Compatible" content="">
-        <meta name="viewport" content="width=device-width, Initial-scale=1.0">
-        <title>Belbin Team role assignment</title>
-        <script src="statics/js/model.js"></script>
-        <script src="statics/js/view.js"></script>
-        <script src="statics/js/controller.js"></script>
-    </head>
-    <body>
-        <div id="app">
-        </div>
+<head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Belbin Team role assignment</title>
+    <link rel="stylesheet" href="static/css/base.css">
+    <script src="static/js/model.js" type="module"></script>
+    <script src="static/js/view.js" type="module"></script>
+    <script src="static/js/controller.js" type="module"></script>
+</head>
+<body>
+    <div id="app"></div>
+</body>
 </html>
